--- a/zuul-service/src/main/resources/application.yml
+++ b/zuul-service/src/main/resources/application.yml
@@ -1,9 +1,62 @@
 spring:
   application:
-    name: zuul-service
+    name: gateway-service
   data:
     rest:
       basePath: /api
+
+  cloud:
+    gateway:
+      routes:
+        #Auth
+        - id: gateway-authservice
+          uri: lb://gateway-authservice
+          predicates:
+            - Path=/auth/api/**
+        - id: auth-frontend
+          uri: https://www.google.nl/search?q=login
+          predicates:
+            - Path=/auth/**
+
+        #Article
+        - id: article-service
+          uri: lb://article-service
+          predicates:
+            - Path=/article/api/**
+        - id: article-frontend
+          uri: https://www.google.nl/search?q=article
+          predicates:
+            - Path=/article/**
+
+        #Farmer
+        - id: farmer-service
+          uri: lb://farmer-service
+          predicates:
+            - Path=/farmer/api/**
+        - id: farmer-frontend
+          uri: https://www.google.nl/search?q=farmer
+          predicates:
+            - Path=/farmer/**
+
+        #Transport
+        - id: transport-service
+          uri: lb://transport-service
+          predicates:
+            - Path=/transport/api/**
+        - id: transport-frontend
+          uri: https://www.google.nl/search?q=transport
+          predicates:
+            - Path=/transport/*
+
+        #Production
+        - id: production-service
+          uri: lb://production-service
+          predicates:
+            - Path=/production/api/**
+        - id: production-frontend
+          uri: https://www.google.nl/search?q=production
+          predicates:
+            - Path=/production/*
 
 server:
   port: 8762
@@ -12,41 +65,13 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${eureka.address:localhost:8761}/eureka/
+      defaultZone: http://${eureka.address:localhost:8761}/eureka
 
-  instance:
-    leaseRenewalIntervalInSeconds: 5
-    hostname: ${vcap.application.uris[0]:localhost}
-    metadataMap:
-      instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-
-
-zuul:
-  ignored-services: '*'
-  sensitive-headers: Cookie, Set-Cookie
-  routes:
-    gateway-authservice:
-      path: /auth/**
-      service-id: gateway-authservice
-
-
-    article:
-      path: /article/**
-      service-id: article-service
-#      stripprefix: false
-
-    farmer:
-      path: /farmer/**
-      service-id: farmer-service
-
-    transport:
-      path: /transport/**
-      service-id: transport-service
-
-    production:
-      path: /production/**
-      service-id: production-service
-  retryable: true #for devs only
+#  instance:
+#    leaseRenewalIntervalInSeconds: 5
+#    hostname: ${vcap.application.uris[0]:localhost}
+#    metadataMap:
+#      instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 ribbon:
   ConnectTimeout: 3000
