New Frontend project with Vue 3 for testing & build service layer for talking with the backend later also implements HATEOAS mapper

--- a/gateway-authservice/src/main/resources/application.yml
+++ b/gateway-authservice/src/main/resources/application.yml
@@ -1,8 +1,15 @@
 #Server properties
 server:
   port: 7070
+
+  # Context path of the application
   servlet:
-    context-path: /api
+    context-path: /auth/api
+
+    # Default HTTP session time out
+    session:
+      timeout: 15m
+  forward-headers-strategy: FRAMEWORK
 
 #Datasource properties
 spring:
