--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,11 @@ services:
     ports:
       - 6073:3306
 
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
+
   article-service:
     container_name: article-service
     build: ./article
@@ -135,7 +140,8 @@ services:
       - 7078:7078
 
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
     environment:
       eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
@@ -160,7 +166,8 @@ services:
       - 7071:7071
 
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
     environment:
       eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
@@ -184,7 +191,8 @@ services:
       - 7073:7073
 
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
     environment:
       eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
@@ -208,7 +216,8 @@ services:
       - 7072:7072
 
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
     environment:
       eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
@@ -232,7 +241,8 @@ services:
       - 7070:7070
 
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
     links:
       - zuul-service
