--- a/article/pom.xml
+++ b/article/pom.xml
@@ -24,6 +24,11 @@
         <spring-cloud.version>2020.0.3</spring-cloud.version>
         <jwwt.version>0.9.1</jwwt.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+
+        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 
@@ -169,6 +174,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
