--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -14,12 +14,12 @@
     <name>eureka-service</name>
     <description>Eureka discovery service for flowcontrol</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>15</java.version>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
 
         <maven.compiler.version>3.8.1</maven.compiler.version>
-        <maven.compiler.source>1.11</maven.compiler.source>
-        <maven.compiler.target>1.11</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
