--- a/article/src/main/resources/application.yml
+++ b/article/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
     hibernate:
       # ddl-auto: create-drop
       dialect: org.hibernate.dialect.MySQLDialect
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: false
     properties:
       hibernate:
