--- a/article/src/main/resources/application.yml
+++ b/article/src/main/resources/application.yml
@@ -14,6 +14,8 @@ server:
   # Which baseurl:port to show in response
   forward-headers-strategy: FRAMEWORK
 
+
+#============Spring============
 spring:
   application:
     name: ARTICLE-SERVICE
@@ -48,7 +50,7 @@ spring:
 #============Springdoc============
 springdoc:
   swagger-ui:
-    path: /swagger-ui-custom.html
+    path: /docs.html
 
 
 #============Eureka============
@@ -75,6 +77,7 @@ security:
     secret: t!1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
 
 
+#============Seeder============
 seeder:
   debug: true
   insert-data: false
