--- a/farmer/src/main/resources/application.yml
+++ b/farmer/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 #============SERVER============
-# HTTP server port
-
-
-
 server:
+  # HTTP server port
   port: 7071
 
   # Context path of the application
@@ -15,9 +12,12 @@ server:
       timeout: 15m
   forward-headers-strategy: FRAMEWORK
 
+#============Spring============
 spring:
   application:
     name: farmer-service
+
+  #============Jackson============
   jackson:
     serialization:
       fail_on_empty_beans: false
@@ -32,8 +32,8 @@ spring:
   jpa:
     hibernate:
       # ddl-auto: create-drop
-      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-      ddl-auto: create-drop
+      dialect: org.hibernate.dialect.MySQLDialect
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
@@ -42,14 +42,13 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
-hibernate:
-  auto_quote_keyword=true:
 
-swagger:
-  host:
-    url: http://localhost:7071
+#============Springdoc============
+springdoc:
+  swagger-ui:
+    path: /docs.html
 
-
+#============Eureka============
 eureka:
   client:
     register-with-eureka: true
@@ -59,6 +58,7 @@ eureka:
   instance:
     prefer-ip-address: true
 
+#============Security============
 security:
   basic:
     enable: false
@@ -69,3 +69,8 @@ security:
     prefix: Bearer
     expiration: 86400
     secret: t!1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
+
+#============Seeder============
+seeder:
+  debug: true
+  insert-data: true
