--- a/production/src/main/resources/application.yml
+++ b/production/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 #============SERVER============
-# HTTP server port
-
-
-
 server:
+  # HTTP server port
   port: 7073
 
   # Context path of the application
@@ -14,11 +11,15 @@ server:
     session:
       timeout: 15m
 
+#============Spring============
 spring:
   application:
-    name: production-service
+    name: PRODUCTION_SERVICE
+
   hateoas:
     use-hal-as-default-json-media-type: true
+
+  #============Jackson============
   jackson:
     default-property-inclusion: NON_ABSENT
   #============JDBC============
@@ -42,15 +43,19 @@ spring:
           lob:
             non_contextual_creation: true
 
+  #============Redis============
   redis:
     hostname: localhost
     port: 6379
     password: sOmE_sEcUrE_pAsS
 
-swagger:
-  host:
-    url: http://localhost:7073
+#============Springdoc============
+springdoc:
+  swagger-ui:
+    path: /docs.html
 
+
+#============Eureka============
 eureka:
   client:
     register-with-eureka: true
@@ -68,7 +73,7 @@ eureka:
 #      palletlabel.topic.name: palletLabel
 #      shippinglabel.topic.name: shippingLabel
 
-
+#============Security============
 security:
   basic:
     enable: false
@@ -79,3 +84,8 @@ security:
     prefix: Bearer
     expiration: 86400
     secret: t!1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
+
+#============Seeder============
+seeder:
+  debug: true
+  insert-data: false
