--- a/transport/src/main/resources/application.yml
+++ b/transport/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 #============SERVER============
-# HTTP server port
-
 server:
+  # HTTP server port
   port: 7072
 
   # Context path of the application
@@ -12,9 +11,14 @@ server:
     session:
       timeout: 15m
 
+  # Which baseurl:port to show in response
+  forward-headers-strategy: FRAMEWORK
+
+#============Spring============
 spring:
   application:
-    name: transport-service
+    name: TRANSPORT-SERVICE
+
   #============JDBC============
   datasource:
     url: jdbc:mariadb://localhost:3306/transport
@@ -37,11 +41,12 @@ spring:
             non_contextual_creation: true
 
 
-swagger:
-  host:
-    url: http://localhost:7072
+#============Springdoc============
+springdoc:
+  swagger-ui:
+    path: /docs.html
 
-
+#============Eureka============
 eureka:
   client:
     register-with-eureka: true
@@ -51,6 +56,7 @@ eureka:
   instance:
     prefer-ip-address: true
 
+#============Security============
 security:
   basic:
     enable: false
@@ -61,3 +67,8 @@ security:
     prefix: Bearer
     expiration: 86400
     secret: t!1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
+
+#============Seeder============
+seeder:
+  debug: true
+  insert-data: false
