--- a/gateway-authservice/src/main/resources/application.yml
+++ b/gateway-authservice/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
   jpa:
     hibernate:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
