--- a/production/src/main/resources/application.yml
+++ b/production/src/main/resources/application.yml
@@ -14,7 +14,7 @@ server:
 #============Spring============
 spring:
   application:
-    name: PRODUCTION_SERVICE
+    name: production-service
 
   hateoas:
     use-hal-as-default-json-media-type: true
@@ -34,7 +34,7 @@ spring:
     hibernate:
       #      ddl-auto: create-drop
       dialect: org.hibernate.dialect.MySQLDialect
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
@@ -88,4 +88,4 @@ security:
 #============Seeder============
 seeder:
   debug: true
-  insert-data: false
+  insert-data: true
