--- a/transport/src/main/resources/application.yml
+++ b/transport/src/main/resources/application.yml
@@ -56,6 +56,7 @@ eureka:
   instance:
     prefer-ip-address: true
 
+
 #============Security============
 security:
   basic:
@@ -71,4 +72,4 @@ security:
 #============Seeder============
 seeder:
   debug: true
-  insert-data: false
+  insert-data: true
