--- a/farmer/src/main/resources/application.yml
+++ b/farmer/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 #============SERVER============
-# HTTP server port
-
-
-
 server:
+  # HTTP server port
   port: 7071
 
   # Context path of the application
@@ -13,11 +10,16 @@ server:
     # Default HTTP session time out
     session:
       timeout: 15m
+
+  # Which baseurl:port to show in response
   forward-headers-strategy: FRAMEWORK
 
+#============Spring============
 spring:
   application:
     name: farmer-service
+
+  #============Jackson============
   jackson:
     serialization:
       fail_on_empty_beans: false
@@ -42,14 +44,15 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
-hibernate:
-  auto_quote_keyword=true:
-
-swagger:
-  host:
-    url: http://localhost:7071
 
 
+#============Springdoc============
+springdoc:
+  swagger-ui:
+    path: /docs.html
+
+
+#============Eureka============
 eureka:
   client:
     register-with-eureka: true
@@ -59,6 +62,8 @@ eureka:
   instance:
     prefer-ip-address: true
 
+
+#============Security============
 security:
   basic:
     enable: false
@@ -69,3 +74,9 @@ security:
     prefix: Bearer
     expiration: 86400
     secret: t!1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
+
+
+#============Seeder============
+seeder:
+  debug: true
+  insert-data: false
