--- a/zuul-service/src/main/resources/application.yml
+++ b/zuul-service/src/main/resources/application.yml
@@ -69,12 +69,15 @@ spring:
 server:
   port: 8762
 
-
+#============Eureka============
 eureka:
   client:
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
       defaultZone: http://${eureka.address:localhost:8761}/eureka
-
+  instance:
+    prefer-ip-address: true
 #  instance:
 #    leaseRenewalIntervalInSeconds: 5
 #    hostname: ${vcap.application.uris[0]:localhost}
